# pyTradeBinBot

./: .gitignore  Dockerfile  LICENSE  MANUAL.md  README.md  __init__.py  create_env_3.9.sh  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  mybot.py
src/binbinance/: __init__.py  app_params.py  binOrderSim.py  binWebSocket.py  binalytics.py  logManager.py  orderManager.py  user_cfg.py
test__codes/: binbinance_test.py  binwebsocket_test.py  ordersim_test.py  ta-lib_test.py  timestamp_test.py
test_codes/: binalytics_test.py  binbinance_test.py  websocket_test.py
